Add flow logs stack

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -254,6 +254,25 @@ Resources:
       TemplateURL: !Sub ${TemplateUrlPrefix}/gateway-endpoints.yml
       TimeoutInMinutes: 5
 
+  # Flow logs
+  FlowLogsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        VpcId: !Ref Vpc
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/flow-logs.yml
+      TimeoutInMinutes: 5
+
 Outputs:
   VpcId:
     Description: Resource ID for the VPC
