--- a/stacks/vpc/public-network-acl.yml
+++ b/stacks/vpc/public-network-acl.yml
@@ -112,8 +112,8 @@ Resources:
       RuleNumber: 141
 
   # INGRESS 150
-  # Allows inbound ICMP traffic, mainly to allow PING traffic back from pings
-  # originating from within the VPC
+  # Allows inbound echo reply ICMP traffic, mainly to allow PING traffic back
+  # from pings originating from within the VPC
   InboundIpV4IcmpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
@@ -253,8 +253,8 @@ Resources:
       RuleNumber: 141
 
   # EGRESS 150
-  # Allows outbound ICMP traffic, mainly to allow PING from hosts within the
-  # VPC to test reachability
+  # Allows outbound echo request ICMP traffic, mainly to allow PING from hosts
+  # within the VPC to test reachability
   OutboundIpV4IcmpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
