--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -284,12 +284,12 @@ Resources:
         - Type: AAAA
           Name: !Sub "*.${EnvironmentTypeAbbreviation}-${VpcId}.prx.tech."
           AliasTarget:
-            DNSName: !Ref Alb.DNSName
+            DNSName: !GetAtt Alb.DNSName
             HostedZoneId: !GetAtt Alb.CanonicalHostedZoneID
         - Type: A
           Name: !Sub "*.${EnvironmentTypeAbbreviation}-${VpcId}.prx.tech."
           AliasTarget:
-            DNSName: !Ref Alb.DNSName
+            DNSName: !GetAtt Alb.DNSName
             HostedZoneId: !GetAtt Alb.CanonicalHostedZoneID
 
 Outputs:
