Fix template typo

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -173,7 +173,7 @@ Resources:
           Name: !Ref kContainerName
           PortMappings:
             - ContainerPort: !Ref kApplicationPort
-            - HostPort: 0
+              HostPort: 0
       ExecutionRoleArn: !GetAtt ExecutionRole.Arn
       NetworkMode: bridge
       Tags:
