Fix target type

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -56,7 +56,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TargetType: ip
+      TargetType: instance
       UnhealthyThresholdCount: 3
       VpcId: !Ref VpcId
 
