Pass AZ service token to VPC stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -783,6 +783,7 @@ Resources:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         AwsOrganizationId: !Ref AwsOrganizationId
+        AvailabilityZoneSelectorServiceToken: !GetAtt CustomResourcesStack.Outputs.AvailabilityZoneSelectorServiceToken
         EnvironmentType: !Ref EnvironmentType
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/vpc"]]
         CloudFormationNotificationArn:
