--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -8,6 +8,8 @@ Description: >-
 Parameters:
   AwsOrganizationId:
     Type: String
+  AvailabilityZoneSelectorServiceToken:
+    Type: String
   EnvironmentType:
     Type: String
   TemplateUrlPrefix:
