Pass AZ service token to subnet stacks

--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -11,6 +11,8 @@ Parameters:
     Type: String
   VpcIpv6CidrBlocks:
     Type: CommaDelimitedList
+  AvailabilityZoneSelectorServiceToken:
+    Type: String
 
 Resources:
   # Routing for private subnets
