--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -120,6 +120,7 @@ Resources:
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
+        AvailabilityZoneSelectorServiceToken: !Ref AvailabilityZoneSelectorServiceToken
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
@@ -140,6 +141,7 @@ Resources:
         VpcId: !Ref Vpc
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
+        AvailabilityZoneSelectorServiceToken: !Ref AvailabilityZoneSelectorServiceToken
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
