Add AZ service to subnet stacks

--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -15,6 +15,11 @@ Parameters:
     Type: String
 
 Resources:
+  AvailabilityZoneSelectorService:
+    Type: Custom::AvailabilityZoneSelector
+    Properties:
+      ServiceToken: !Ref AvailabilityZoneSelectorServiceToken
+
   # Routing for private subnets
   PrivateRouteTable:
     Type: AWS::EC2::RouteTable
