--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -15,6 +15,11 @@ Parameters:
     Type: String
 
 Resources:
+  AvailabilityZoneSelectorService:
+    Type: Custom::AvailabilityZoneSelector
+    Properties:
+      ServiceToken: !Ref AvailabilityZoneSelectorServiceToken
+
   # Internet gateway
   InternetGateway:
     Type: AWS::EC2::InternetGateway
