Switch to AZ selector service

--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -43,7 +43,7 @@ Resources:
     # DeletionPolicy: Retain
     # UpdateReplacePolicy: Retain
     Properties:
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [15, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [3, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
@@ -68,7 +68,7 @@ Resources:
     # DeletionPolicy: Retain
     # UpdateReplacePolicy: Retain
     Properties:
-      AvailabilityZone: !Select [1, !GetAZs ""]
+      AvailabilityZone: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [14, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [4, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
@@ -93,7 +93,7 @@ Resources:
     # DeletionPolicy: Retain
     # UpdateReplacePolicy: Retain
     Properties:
-      AvailabilityZone: !Select [2, !GetAZs ""]
+      AvailabilityZone: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [13, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [5, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
