--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -78,7 +78,7 @@ Resources:
     # TODO DeletionPolicy: Retain
     # TODO UpdateReplacePolicy: Retain
     Properties:
-      AvailabilityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [12, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 1, 64]]
       Tags:
@@ -103,7 +103,7 @@ Resources:
     # TODO DeletionPolicy: Retain
     # TODO UpdateReplacePolicy: Retain
     Properties:
-      AvailabilityZone: !Select [1, !GetAZs ""]
+      AvailabilityZone: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [11, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
@@ -128,7 +128,7 @@ Resources:
     # TODO DeletionPolicy: Retain
     # TODO UpdateReplacePolicy: Retain
     Properties:
-      AvailabilityZone: !Select [2, !GetAZs ""]
+      AvailabilityZone: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [10, !Cidr [!Ref VpcCidrBlock, 16, 12]]
       Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !Ref VpcIpv6CidrBlocks], 6, 64]]
       Tags:
