Add third subnet to ASG

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -203,7 +203,7 @@ Resources:
       VPCZoneIdentifier:
         - !Ref VpcPublicSubnet1Id
         - !Ref VpcPublicSubnet2Id
-        # - !Ref VpcPublicSubnet3Id
+        - !Ref VpcPublicSubnet3Id
 
   DefaultCapacityProvider:
     Type: AWS::ECS::CapacityProvider
