--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -13,6 +13,8 @@ Parameters:
     Type: CommaDelimitedList
   AvailabilityZoneSelectorServiceToken:
     Type: String
+  NetworkAclName:
+    Type: String
 
 Resources:
   AvailabilityZoneSelectorService:
@@ -63,6 +65,12 @@ Resources:
     Properties:
       RouteTableId: !Ref PrivateRouteTable
       SubnetId: !Ref PrivateSubnet1
+  PrivateSubnet1NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet1
+      NetworkAclId: !Ref NetworkAclName
+
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
     # DeletionPolicy: Retain
@@ -88,6 +96,12 @@ Resources:
     Properties:
       RouteTableId: !Ref PrivateRouteTable
       SubnetId: !Ref PrivateSubnet2
+  PrivateSubnet2NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      NetworkAclId: !Ref NetworkAclName
+
   PrivateSubnet3:
     Type: AWS::EC2::Subnet
     # DeletionPolicy: Retain
@@ -113,6 +127,11 @@ Resources:
     Properties:
       RouteTableId: !Ref PrivateRouteTable
       SubnetId: !Ref PrivateSubnet3
+  PrivateSubnet3NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet3
+      NetworkAclId: !Ref NetworkAclName
 
 Outputs:
   RouteTableId:
