--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -13,6 +13,8 @@ Parameters:
     Type: CommaDelimitedList
   AvailabilityZoneSelectorServiceToken:
     Type: String
+  NetworkAclName:
+    Type: String
 
 Resources:
   AvailabilityZoneSelectorService:
@@ -98,6 +100,12 @@ Resources:
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet1
+  PublicSubnet1NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      NetworkAclId: !Ref NetworkAclName
+
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     # TODO DeletionPolicy: Retain
@@ -123,6 +131,12 @@ Resources:
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet2
+  PublicSubnet2NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      NetworkAclId: !Ref NetworkAclName
+
   PublicSubnet3:
     Type: AWS::EC2::Subnet
     # TODO DeletionPolicy: Retain
@@ -148,6 +162,11 @@ Resources:
     Properties:
       RouteTableId: !Ref PublicRouteTable
       SubnetId: !Ref PublicSubnet3
+  PublicSubnet3NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet3
+      NetworkAclId: !Ref NetworkAclName
 
 Outputs:
   RouteTableId:
