Don't retain public subnet 1

--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -109,7 +109,7 @@ Resources:
   PublicSubnet2:
     Type: AWS::EC2::Subnet
     # TODO DeletionPolicy: Retain
-    UpdateReplacePolicy: Retain
+    # TODO UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [11, !Cidr [!Ref VpcCidrBlock, 16, 12]]
