Update zone names list

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -179,6 +179,9 @@ Resources:
 
         ec2 = boto3.client("ec2")
 
+        # All regions should have at least two AZs after accounting for
+        # disallowed AZs. If a region would otherwise be left with only a
+        # single AZ, all AZs for that region should be disallowed.
         DISALLOWED_AZS = ["use1-az3"]
 
 
@@ -197,7 +200,7 @@ Resources:
                     names = list(map(lambda a: a["ZoneName"], allowed))
 
                     cfnresponse.send(event, context, cfnresponse.SUCCESS, {
-                        "ZoneNames": names,
+                        "ZoneNames": names + names + names,
                         "Count": len(names)
                     })
                 else:
