Fix stack name reference

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -183,7 +183,7 @@ Resources:
         VpcCidrBlock: !GetAtt Vpc.CidrBlock
         VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
         AvailabilityZoneSelectorServiceToken: !Ref AvailabilityZoneSelectorServiceToken
-        NetworkAclName: !GetAtt PublicNetworkAclStack.Outputs.NetworkAclName
+        NetworkAclName: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
