Retain all subnets

--- a/stacks/vpc/private-subnets.yml
+++ b/stacks/vpc/private-subnets.yml
@@ -42,8 +42,8 @@ Resources:
   # Private subnets
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
-    # DeletionPolicy: Retain
-    # UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [15, !Cidr [!Ref VpcCidrBlock, 16, 12]]
@@ -73,8 +73,8 @@ Resources:
 
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
-    # DeletionPolicy: Retain
-    # UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [14, !Cidr [!Ref VpcCidrBlock, 16, 12]]
@@ -104,8 +104,8 @@ Resources:
 
   PrivateSubnet3:
     Type: AWS::EC2::Subnet
-    # DeletionPolicy: Retain
-    # UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [13, !Cidr [!Ref VpcCidrBlock, 16, 12]]
