--- a/stacks/vpc/public-subnets.yml
+++ b/stacks/vpc/public-subnets.yml
@@ -77,8 +77,8 @@ Resources:
   # Public subnets
   PublicSubnet1:
     Type: AWS::EC2::Subnet
-    # TODO DeletionPolicy: Retain
-    # TODO UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [0, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [0, !Cidr [!Ref VpcCidrBlock, 16, 12]]
@@ -108,8 +108,8 @@ Resources:
 
   PublicSubnet2:
     Type: AWS::EC2::Subnet
-    # TODO DeletionPolicy: Retain
-    # TODO UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [1, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [11, !Cidr [!Ref VpcCidrBlock, 16, 12]]
@@ -139,8 +139,8 @@ Resources:
 
   PublicSubnet3:
     Type: AWS::EC2::Subnet
-    # TODO DeletionPolicy: Retain
-    # TODO UpdateReplacePolicy: Retain
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AvailabilityZone: !Select [2, !GetAtt AvailabilityZoneSelectorService.ZoneNames]
       CidrBlock: !Select [10, !Cidr [!Ref VpcCidrBlock, 16, 12]]
