--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -778,6 +778,7 @@ Resources:
 
   SharedVpcStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
