Use unlimited CPU credits

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -141,6 +141,8 @@ Resources:
                 - 80
                 - 30
               VolumeType: gp3
+        CreditSpecification:
+          CpuCredits: unlimited
         IamInstanceProfile:
           Arn: !GetAtt InstanceProfile.Arn
         ImageId: ami-09a3cad575b7eabaa # TODO Make multi-region aware
